--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Todo List </title>
+		<title>#100DEVS To do List </title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="style.css">
@@ -21,7 +21,8 @@
     </p>
     
     <form>
-      <input type="text" placeholder>
+      <input type="text" placeholder="Type your tasks here!">
+      <input type="button" name="go" value="Enter Task" />
     </form>
 		
     
