--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     	<meta charset="utf-8">
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
 		<title>#100DEVS To do List </title>
 
@@ -22,7 +25,7 @@
     
     <form>
       <input type="text" placeholder="Type your tasks here!">
-      <input type="button" name="go" value="Enter Task" />
+      <input id="submit" type="button" name="go" value="Enter Task" />
     </form>
 		
     
