💫👗 Checkpoint ./script.js:41311861/102:42995283/1241 ./style.css:41298979/50:42995280/13:42995347/496 ./index.html:42995283/14:42995347/13

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </p>
     
     <form>
-      <input type="text" placeholder="Type your tasks here!">
-      <input id="submit" type="button" name="go" value="Enter Task" />
+      <input id="userText" type="text" placeholder="Type your tasks here!">
+      <input id="submit" type="button" name="go" value="Add" />
     </form>
 		
     
