🐀🌘 Checkpoint ./script.js:41298979/1:41311861/431:42995283/228 ./style.css:42995347/182 ./.glitch-assets:42995347/373 ./index.html:42995347/60

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 	</head>
 	<body>
 
-
-		<h1>#100DEVS To do list </h1>
-    
+    <section>
+      <a href 
+		  <h1>#100DEVS To do list </h1>
+    </section>
     <p>
       Use the box below to create your to do list for #100DEVS tasks. When you have completed the item, click on it to cross it off.
     </p>
